# large_preimages_snarks

./: Cargo.toml  LICENSE.txt  README.md
crates/peqpreimage-snark/: Cargo.toml  README.md
crates/peqpreimage-snark/examples/: partial_equality.rs
crates/peqpreimage-snark/src/: lib.rs
crates/peqpreimage-snark/src/cp/: circuit.rs  groth16.rs  mod.rs  pedersen.rs
crates/peqpreimage-snark/src/ivc/: mod.rs
crates/peqpreimage-snark/src/ivc/accumulated_hash/: gadgets.rs  mod.rs
crates/peqpreimage-snark/src/ivc/nova/: circuit.rs  mod.rs
crates/sha256-cf/: Cargo.toml  README.md
crates/sha256-cf/src/: lib.rs
crates/sha256-cf/src/gadgets/: mod.rs
crates/sha256-cf/src/gadgets/arkworks/: sha256.rs
crates/sha256-cf/src/gadgets/bellpepper/: mod.rs  num.rs  sha256.rs
crates/txredaction-snark/: Cargo.toml  README.md
crates/txredaction-snark/benches/: 128KB.csv  bench.rs
crates/txredaction-snark/src/: lib.rs
