[package]
name = "peqpreimage-snark"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { workspace = true }
sha256-cf= { version = "0.1", path = "../sha256-cf" }

ark-std = "0.4.0"
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false}
ark-ff = { version = "^0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-crypto-primitives = {version = "^0.4.0", features = ["commitment","prf","r1cs"]}

nova-snark = { git = "https://github.com/microsoft/Nova.git"}
halo2curves = { version = "0.6.1", features = ["bits", "derive_serde"] }

bellpepper-core = { version="0.4.0", default-features = false }
bellpepper = { version="0.4.1", default-features = false }

neptune = { version = "13.0.0", default-features = false }

ff = "0.13.0"

generic-array = "1.1.0"

rand_chacha = "0.3.1"
rand = "0.8.5"

rayon = "1.10.0"

flate2 = "1.0.34"
bincode = "1.3.3"
serde = "1.0.214"


