[package]
name = "sha256-cf"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { workspace = true, features = ["compress"] }

ark-std = "0.4.0"
ark-r1cs-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false}
ark-ff = { version = "^0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = "0.4.2"

rand_chacha = "0.3.1"
rand = "0.8.5"

bellpepper-core = { version="0.4.0", default-features = false }
bellpepper = { version="0.4.1", default-features = false }

neptune = { version = "13.0.0", default-features = false }

ff = "0.13.0"
halo2curves = { version = "0.6.1", features = ["bits", "derive_serde"] }
